# cirrus

./: .gitignore  LICENSE  README.md  cirrus.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml
cirrus/: __init__.py  cli.py
cirrus/analysis/: __init__.py  blast_radius.py  correlator.py  custom_rules.py  domain_enrichment.py  hunt.py  ip_enrichment.py  report.py  scan.py  triage.py
cirrus/audit/: logger.py
cirrus/auth/: authenticator.py  private_browser.py
cirrus/collectors/: app_registrations.py  audit_logs.py  base.py  conditional_access.py  mail_forwarding.py  mailbox_delegation.py  mailbox_rules.py  mfa_methods.py  oauth_grants.py  pim_activations.py  registered_devices.py  risky_users.py  service_principals.py  signin_logs.py  sp_signin_logs.py  unified_audit.py  users.py
cirrus/compliance/: base.py  context.py  report.py  runner.py
cirrus/compliance/checks/: admin.py  exchange.py  identity.py  logging.py  teams_sharepoint.py
cirrus/output/: case.py  excel.py  writer.py
cirrus/utils/: deps.py  dns_checker.py  exchange_ps.py  flags.py  helpers.py  license.py  sharepoint_ps.py  teams_ps.py  updater.py
cirrus/workflows/: ato.py  base.py  bec.py  bec_ato.py  full.py  sp_compromise.py
tests/: conftest.py  test_audit_chain.py  test_blast_radius.py  test_collector_flags.py  test_correlator.py  test_domain_enrichment.py  test_helpers.py  test_hunt.py  test_inbox_rules.py  test_ioc_flags.py  test_ip_enrichment.py  test_pim_activations.py  test_sp_signin_logs.py  test_validate_upn.py
