[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cirrus"
version = "0.1.0"
description = "Cloud Incident Response & Reconnaissance Utility Suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "msal>=1.28",
    "requests>=2.31",
    "pydantic>=2.0",
]

[project.scripts]
cirrus = "cirrus.cli:app"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cirrus*"]
