[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cirrus"
version = "0.4.55"
description = "Cloud Incident Response & Reconnaissance Utility Suite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "msal>=1.28",
    "requests>=2.31",
    "pydantic>=2.0",
    "dnspython>=2.4",
    "openpyxl>=3.1",
]

[project.scripts]
cirrus = "cirrus.cli:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["cirrus*"]
